# Site

./: docker-compose.yaml  pyproject.toml
project/: manage.py  pyproject.toml
project/app/: models.py  views.py
project/app/migrations/: 0001_initial.py  0002_administrator.py  0003_delete_administrator.py
project/project/: settings.py  urls.py
